Bug 103573 - FILEOPEN: DOCX: Text boxes with relative position to left or right margin aligned to the center of the page
Summary: FILEOPEN: DOCX: Text boxes with relative position to left or right margin ali...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All Linux (All)
: medium normal
Assignee: Tamás Zolnai
URL:
Whiteboard: target:5.3.0 target:5.2.4
Keywords:
Depends on:
Blocks:
 
Reported: 2016-10-29 12:27 UTC by Tamás Zolnai
Modified: 2016-11-05 20:35 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Test document with relative positions to the margins. (15.78 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2016-10-29 12:27 UTC, Tamás Zolnai
Details
Picture shows how it looks like in MS Word (46.22 KB, image/png)
2016-10-29 12:28 UTC, Tamás Zolnai
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tamás Zolnai 2016-10-29 12:27:07 UTC
Description:
When opening the attached DOCX file saved by MS Word, the imported text boxes have wrong position. The two text boxes should be positioned to the center of the right and the left margin area (see attached screenshot) and not to the center of the page.

Steps to Reproduce:
1.Open attached DOCX file in Writer
2.
3.

Actual Results:  
Both text boxes are positioned to the center of the page.

Expected Results:
One text box should be positioned to the right margin area, the other one should have a position inside the left margin area.


Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/54.0.2840.71 Safari/537.36
Comment 1 Tamás Zolnai 2016-10-29 12:27:42 UTC
Created attachment 128341 [details]
Test document with relative positions to the margins.
Comment 2 Tamás Zolnai 2016-10-29 12:28:19 UTC
Created attachment 128342 [details]
Picture shows how it looks like in MS Word
Comment 3 Cor Nouws 2016-10-29 12:52:11 UTC
confirmed in Version: 5.3.0.0.alpha1+
Build ID: 9b6b1ab076c95bc05b1025d30c4ab0ceecbba083
CPU Threads: 4; OS Version: Linux 4.8; UI Render: default; VCL: gtk3; 
Locale: nl-NL (nl_NL.UTF-8); Calc: group

in 3.3.0.4 both were left aligned