tdf#103573: DOCX: Handle relative positions to left or right margin

Positioning relative to left or right margin in MS Word
works the same as the positioning relative to left or right
page border in LO Writer.

Reviewed-on: https://gerrit.libreoffice.org/30376
Reviewed-by: Tamás Zolnai <tamas.zolnai@collabora.com>
Tested-by: Tamás Zolnai <tamas.zolnai@collabora.com>
(cherry picked from commit 24e522f723569b53d9a830166b3825292bcd7527)

Conflicts:
	sw/qa/extras/ooxmlexport/ooxmlexport9.cxx

Change-Id: I476a5e9e76f766b7fb7f1c7f4a068af8bb3c8813